Client side example.

--- a/public/jstest.html
+++ b/public/jstest.html
@@ -33,7 +33,7 @@
       $container = $('#buy-links');
 
       if (data.length == 0) {
-        $container.text('Buy: ');
+        $container.text('Not available online.');
         return;
       }
 
