--- a/public/jstest.html
+++ b/public/jstest.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="/javascripts/beatbox.js"></script>
 
   <script>
-    beatbox.init({ 'amazon': 'amazonaffiliatecode', 'test': 'hi', 'itunes': 'itunesaffiliatecode' }, 'http://localhost:3000')
+    beatbox.init({ 'amazon': 'amazonaffiliatecode', 'test': 'hi', 'itunes': 'itunesaffiliatecode' }, 'http://beatbox.heroku.com')
   </script>
 
   <style>
