Styles on search.

--- a/public/jstest.html
+++ b/public/jstest.html
@@ -29,7 +29,7 @@
   <div id="buy-links"></div>
   
   <script>
-    beatbox.search({ artist_name: 'DJ Quik' }, function(data) {
+    beatbox.search({ artist_name: 'DJ uik' }, function(data) {
       $container = $('#buy-links');
 
       if (data.length == 0) {
